apollo-router/src/configuration/snapshots/apollo_router__configuration__tests__upgrade_old_configuration@cors_origins_empty.yaml.snap
---
source: apollo-router/src/configuration/tests.rs
expression: new_config
---
---
cors:
  allow_credentials: false
  policies:
    - origins: []
