apollo-router/src/configuration/snapshots/apollo_router__configuration__tests__upgrade_old_configuration@defer_support_ga.router.yaml.snap
---
source: apollo-router/src/configuration/tests.rs
expression: new_config
---
---
supergraph:
  defer_support: true

