apollo-router/src/configuration/snapshots/apollo_router__configuration__tests__upgrade_old_configuration@experimental-local-manifests.yaml.snap
---
source: apollo-router/src/configuration/tests.rs
expression: new_config
---
---
persisted_queries:
  enabled: true
  local_manifests:
    - "./manifest.json"
