apollo-router/src/configuration/snapshots/apollo_router__configuration__tests__upgrade_old_configuration@field_level_instrumentation.yaml.snap
---
source: apollo-router/src/configuration/tests.rs
expression: new_config
---
---
telemetry:
  apollo:
    field_level_instrumentation:
      sampler: always_off

