apollo-router/src/configuration/snapshots/apollo_router__configuration__tests__upgrade_old_configuration@http2.yaml.snap
---
source: apollo-router/src/configuration/tests.rs
expression: new_config
---
---
traffic_shaping:
  all:
    experimental_http2: disable
  subgraphs:
    products:
      experimental_http2: enable

