apollo-router/src/configuration/snapshots/apollo_router__configuration__tests__upgrade_old_configuration@http_max_request_bytes.router.yaml.snap
---
source: apollo-router/src/configuration/tests.rs
expression: new_config
---
---
limits:
  router:
    http_max_request_bytes: 4000000

